--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,13 @@
     
     background-color: aquamarine;
     margin-top: 130px;
+    min-height: 300px;
+    
 }
 .card 
 {
-    background-color: gray;
+    background-color: grey;
+      min-height: 50px;
 
 }
 .hidden 
