--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,57 @@
 .container
 {
     
-    background-color: aquamarine;
+    background-color: #000080;
     margin-top: 130px;
     min-height: 300px;
     
 }
 .card 
 {
-    background-color: grey;
-      min-height: 50px;
+    background-color: 	#87CEFA;
+      height: 75px;
+      width: 100px;
+      margin-left: 1.5rem;
+      margin-right: 1.5rem;
 
+}
+.test
+{
+    color:white
 }
 .hidden 
 {
     visibility: hidden;
     display: none;
 }
+
+@media only screen and (max-width: 768px) {
+  .card 
+{
+      margin-left: 1rem;
+      margin-right: 1rem;
+
+}
+}
+
+
+@media only screen and (max-width: 528px) {
+  .card 
+{
+    
+      margin-left: 0.5rem;
+      margin-right:0.5rem;
+
+}
+}
+@media only screen and (max-width: 464px) {
+  .card 
+{
+    background-color: grey;
+      margin-left: 0.05rem;
+      margin-right:0.rem;
+
+}
+}
+
+
