--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+:root {
+  /*p for primary, s for secondary, t for tertiary*/
+  --charcoal: #2E4057;
+  --orange-p: #FE9D0B;
+  --blue: #048BA8;
+  --green:#99C24D;
+  --black: #2F2D2E;
+}
+
+
+
 .container
 {
     
-    background-color: #080C75;
-    margin-top: 130px;
-    min-height: 300px;
+    background-color: var(--charcoal);
+    padding:3rem;
+    min-height: 40.625em;
     
 }
-.game
-{
-    min-height: 650px;
-    
-}
-.buttons
+
+.btn
 {
     height:20%;
-   vertical-align: middle
+    background-color: var(--orange-p);
+    color:var(--charcoal);
+    font-weight: 900;
+    letter-spacing: 2px;
+
+
 }
 .card 
 {
-    background-color: 	#87CEFA;
+    background-color:white;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: var(--charcoal);
       height: 80px;
       width: 100px;
       margin-left: 1.5rem;
       margin-right: 1.5rem;
     
 }
-.test
+h5
 {
-    color:white
+    color:white;
+     font-size: 1.2em;
+     margin-top: 3rem!important;
+     font-family: "Roboto";
+     font-weight: 500;
+    
 }
-.endtext
+h1
 {
-    color:white
+    color: white;
+    font-size: 3rem;
+    font-family: "Press Start 2P";
+
+}
+h3
+{
+    color: white;
+    font-size: 2rem;
+    font-family: "Roboto";
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 .hidden 
 {
