--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,32 +21,18 @@ body {
  height: 100%;
  position: relative;
 }
-.main-container {
- min-height: 100vh; /* will cover the 100% of viewport */
- overflow: hidden;
- display: block;
- position: relative;
- padding-bottom: 100px; /* height of your footer */
+section
+{
+    height: 100vh;
 }
-footer {
- position: absolute;
- bottom: 0;
- width: 100%;
-}
-
-
-
-
-
 footer
 {
     background-color: var(--charcoal);
 }
 
-
 .container
 {
-    
+    margin-top: 100px!important;
     background-color: var(--charcoal);
     padding:3rem;
     min-height: 40.625em;
@@ -120,4 +106,22 @@ h3
 .form-control:focus {
   border-color: var(--orange-p);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--orange-p);
+}
+
+.smart-scroll {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
+.scrolled-down {
+  transform: translateY(-100%);
+  transition: all 0.3s ease-in-out;
+}
+
+.scrolled-up {
+  transform: translateY(0);
+  transition: all 0.3s ease-in-out;
 }
