add how to play section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,11 +149,14 @@ h4
     visibility: hidden;
     display: none;
 }
-
-
-
-
-
+.h2p
+{
+    background-color: #f1faee;
+}
+.about
+{
+    color: var(--charcoal);
+}
 
 
 .swirl-in-fwd {
