--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,19 @@ footer {
  background-color: var(--charcoal);
 }
 
+.social-links li a i {
+  width: 4rem;
+  height: 4rem;
+  padding:1.5rem 0;
+  border-radius: 50%;
+  font-size: 1.6rem;
+  line-height: 1rem;
+  text-align: center;
+  color: var(--charcoal);
+  background-color: white;
+}
+
+
 .container
 {
     margin-top: 200px!important;
