--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
  overflow: hidden;
  display: block;
  position: relative;
- padding-bottom: 100px; 
+ padding-bottom: 6.25rem; 
 }
 footer {
  position: absolute;
@@ -46,11 +46,11 @@ footer {
 }
 .container
 {
-    margin-top: 200px!important;
-     margin-bottom: 200px!important;
+    margin-top: 12.5rem!important;
+     margin-bottom: 12.5rem!important;
     background-color: var(--charcoal);
     padding:3rem;
-    min-height: 40.625em;
+    min-height: 40.47323009899rem;
     
 }
 .navbar
@@ -68,18 +68,18 @@ footer {
     background-color: var(--orange-p);
     color:var(--charcoal);
     font-weight: 900;
-    letter-spacing: 2px;
+    letter-spacing: 0.125rem;
 
 
 }
 .card 
 {
     background-color:white;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: bold;
     color: var(--charcoal);
-      height: 80px;
-      width: 100px;
+      height: 5rem;
+      width: 6.25rem;
       margin-left: 1.5rem;
       margin-right: 1.5rem;
     
@@ -87,7 +87,7 @@ footer {
 h5
 {
     color:white;
-     font-size: 1.2em;
+     font-size: 1.2rem;
      margin-top: 3rem!important;
      font-family: "Roboto";
      font-weight: 500;
@@ -106,7 +106,7 @@ h3
     font-size: 2rem;
     font-family: "Roboto";
     font-weight: 700;
-    letter-spacing: 1px;
+    letter-spacing: 0.063rem;
 }
 h4
 {
@@ -114,7 +114,7 @@ h4
     font-size: 1.5rem;
     font-family: "Roboto";
     font-weight: 700;
-    letter-spacing: 1px;
+    letter-spacing: 0.063rem;
 }
 p
 {
@@ -133,7 +133,7 @@ p
 
 .form-control:focus {
   border-color: var(--orange-p);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--orange-p);
+  box-shadow: inset 0 0.063rem 0.063rem rgba(0, 0, 0, 0.075), 0 0 8px var(--orange-p);
 }
 .smart-scroll {
   position: fixed;
@@ -246,4 +246,18 @@ p
     transform: translateY(0);
     animation-timing-function: ease-out;
   }
+}
+
+.rule {
+  width: 100%; 
+  text-align: center; 
+  border-bottom: 0.063rem solid #000; 
+  line-height: 0.1em;
+  margin: 0.625rem 0 1.25rem; 
+} 
+
+.rule span { 
+   background:var(--cream); 
+   padding:0 0.625rem; 
+   color: var(--charcoal);
 }
